# crm

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260409_0001_initial.py  20260409_0002_projects.py  20260411_0003_google_calendar.py  20260411_0004_calendar_feeds.py  20260411_0005_remove_google_calendar.py  20260411_0006_calendar_export.py  20260411_0007_drop_calendar_feeds_import.py  20260412_0008_user_auth.py  20260516_0009_user_id_on_entities.py
app/: __init__.py  config.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  calendar_export.py  (+4 more)
app/bot/: formatting.py  handlers.py  keyboards.py  main.py
app/core/: security.py
app/db/: session.py
app/models/: __init__.py  associations.py  calendar_export_settings.py  enums.py  interaction.py  lead.py  project.py  tag.py  task.py  user.py
app/repositories/: __init__.py  base.py  interaction.py  lead.py  project.py  tag.py  task.py  user.py
app/schemas/: __init__.py  auth.py  common.py  interaction.py  lead.py  project.py  tag.py  task.py
app/services/: __init__.py  calendar_export_ics.py  calendar_export_service.py  lead.py  project.py  reminder.py  task.py
app/tasks/: __init__.py
deploy/: server-nginx.example.conf
frontend/: Dockerfile  index.html  nginx.conf  nginx.default.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css
lidocrm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_endpoints.py
(+57 files in other folders)
